Change a tag into button tag

--- a/style.css
+++ b/style.css
@@ -15,6 +15,11 @@ a:visited {
     color: black;
 }
 
+button {
+    border: 0;
+    background-color: inherit;
+}
+
 svg {
     stroke: black;
     stroke-width: 2px;
