--- a/style.css
+++ b/style.css
@@ -84,6 +84,19 @@ svg {
     align-items: center;
 }
 
+.button-icon {
+    display: flex;
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
+    justify-content: center;
+    align-items: center;
+}
+
+.button-icon:hover {
+    background-color: rgb(240, 240, 240);
+}
+
 .doc-main * {
     width: 129.6rem;
     margin: 0 auto;
