--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
     src: url('./fonts/kakao.woff2') format('truetype');
 }
 
+/* reset */
+
 html {
     font-size: 62.5%;
 }
@@ -30,6 +32,8 @@ button {
     cursor: pointer;
 }
 
+/* util */
+
 .blind {
     position: absolute;
     overflow: hidden;
@@ -39,6 +43,13 @@ button {
     margin: -1px;
     border: 0;
     clip: rect(0, 0, 0, 0);
+}
+
+.multi-ellipsis {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
 
 
@@ -70,7 +81,7 @@ button {
     height: 7.2rem;
     justify-content: center;
     align-items: center;
-    font-size: 1.7rem;
+    font-size: 1.6rem;
     font-weight: bold;
     letter-spacing: -0.1rem;
 }
@@ -129,8 +140,11 @@ a.gnb-menu-item {
 
 .main-section {
     padding-top: 9.6rem;
-    font-size: 4.6rem;
     font-weight: bold;
+}
+
+.title-main {
+    font-size: 4.6rem;
 }
 
 .title-main * {
@@ -161,6 +175,7 @@ a.gnb-menu-item {
 
 .card-wrap {
     width: 50%;
+    height: auto;
     padding: 0 1.8rem;
 }
 
@@ -169,7 +184,19 @@ a.gnb-menu-item {
     padding: 2.5rem 2.4rem 0;
     overflow: hidden;
     border-radius: 14px;
-    box-shadow: 0 0 6px rgb(0 0 0 / 9%);
+    box-shadow: 4px 12px 30px 6px rgb(0 0 0 / 9%);
+    transition: all .2s ease-in-out;
+}
+
+.card:hover {
+    transform: translateY(-5px);
+    box-shadow: 4px 12px 20px 6px rgb(0 0 0 / 18%);
+}
+
+.sticky-card {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 10.9rem;
 }
 
 .card-cate {
@@ -186,9 +213,8 @@ a.gnb-menu-item {
 .cate-txt {
     display: inline-block;
     position: relative;
-    width: 5.2rem;
     height: 3.6rem;
-    padding: 0 0.75rem;
+    padding: 0 1.3rem;
     font-size: 1.3rem;
     line-height: 3.6rem;
     text-align: center;
@@ -199,6 +225,7 @@ a.gnb-menu-item {
 .cate-txt::before {
     content: "";
     position: absolute;
+    z-index: -1;
     top: 0;
     left: -0.4rem;
     width: 1.6rem;
@@ -214,6 +241,7 @@ a.gnb-menu-item {
 
 .card-title {
     display: block;
+    height: 9.2rem;
     margin-top: 1.3rem;
     padding: 0 2.4rem;
     font-size: 3.2rem;
@@ -223,6 +251,9 @@ a.gnb-menu-item {
 .card-info {
     display: block;
     position: absolute;
+    width: 65%;
+    height: 1.4rem;
+    overflow: hidden;
     top: 16.2rem;
     left: 0;
     padding-left: 2.4rem;
@@ -239,9 +270,11 @@ a.gnb-menu-item {
 
 .card-img {
     display: block;
+    width: 100%;
 }
 
 .card-keyword {
+    display: inline-block;
     margin-right: 0.3rem;
 }
 
@@ -260,4 +293,87 @@ a.gnb-menu-item {
     stroke: black#bbb;
     stroke-width: 1.5px;
     fill: #bbb;
+}
+
+.card-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(4, 1fr);
+    grid-gap: 36px;
+}
+
+.long-card1 {
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+}
+
+.long-card2 {
+    grid-column: 2 / 3;
+    grid-row: 2 / 4;
+}
+
+.long-card3 {
+    grid-column: 1 / 2;
+    grid-row: 3 / 5;
+}
+
+.mini-title {
+    height: 6.4rem;
+    margin-top: 1.3rem;
+    padding: 0 2.4rem;
+    font-size: 2.2rem;
+    line-height: 3.2rem;
+}
+
+.mini-info {
+    height: 1.3rem;
+    top: 14.3rem;
+    margin-top: 1.8rem;
+    font-size: 1.3rem;
+}
+
+.mini-wrap {
+    position: relative;
+}
+
+.stock-info {
+    display: flex;
+    margin-top: 1.8rem;
+}
+
+.stock-price {
+    margin-right: 2rem;
+    font-size: 4rem;
+    line-height: 5.9rem;
+}
+
+.price-change {
+    display: flex;
+    align-items: center;
+    position: relative;
+    font-size: 1.4rem;
+    color: #2879ff;
+}
+
+.price-change::before {
+    content: "";
+    position: absolute;
+    top: calc(50% - 0.1rem);
+    left: -1rem;
+    border-right: 4px solid transparent;
+    border-left: 4px solid transparent;
+    border-top: 7px solid #2879ff;
+}
+
+.stock-date {
+    display: block;
+    position: absolute;
+    top: 14rem;
+    font-size: 1.3rem;
+    color: #666;
+    white-space: nowrap;
+}
+
+.pull-line {
+    height: 1.5rem;
 }
