--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ html {
 body {
     word-break: keep-all;
     word-wrap: break-word;
-    font-family: 'kakao5';
+    font-family: 'kakao5', sans-serif;
     font-stretch: ultra-condensed;
 }
 
@@ -46,6 +46,10 @@ button {
     padding: 0;
     background-color: inherit;
     cursor: pointer;
+}
+
+br {
+    display: none;
 }
 
 /* util */
@@ -394,4 +398,52 @@ a.gnb-menu-item {
 
 .pull-line {
     height: 1.5rem;
+}
+
+/* 메인 아티클 2 */
+
+.culture-article {
+    margin: 3.6rem 0;
+    padding: 5.4rem 6.6rem 0;
+    border-radius: 14px;
+    text-align: center;
+    box-sizing: border-box;
+    box-shadow: 2px 5px 40px 0 rgb(0 0 0 / 8%);
+}
+
+.culture-title {
+    display: block;
+    width: 100%;
+    font-size: 4.2rem;
+    font-family: "kakao4", sans-serif;
+}
+
+a.culture-link {
+    display: inline-block;
+    height: 3.3rem;
+    margin-top: 3.6rem;
+    padding: 0.9rem 2rem 0;
+    border-radius: 4.2rem;
+    font-size: 1.4rem;
+    line-height: 2rem;
+    font-family: "kakao2", sans-serif;
+    color: white;
+    background-color: black;
+    vertical-align: top;
+}
+
+.culture-arrow {
+    display: inline-block;
+    width: 1.4rem;
+    height: 1.4rem;
+    margin: 0.5rem 0 0 0.6rem;
+    vertical-align: top;
+}
+
+.culture-img {
+    display: block;
+    width: 100%;
+    max-width: 90rem;
+    height: auto;
+    margin: 5rem auto 0;
 }
