--- a/style.css
+++ b/style.css
@@ -160,12 +160,12 @@ a.gnb-menu-item {
     padding-top: 9.6rem;
 }
 
-.title-main {
+.main-title {
     font-size: 4.6rem;
     letter-spacing: -0.2rem;
 }
 
-.title-main * {
+.main-title * {
     display: block;
     margin: 1rem 0;
 }
