--- a/style.css
+++ b/style.css
@@ -165,9 +165,9 @@ a.gnb-menu-item {
     letter-spacing: -0.2rem;
 }
 
-.main-title * {
+.main-title > * {
     display: block;
-    margin: 1rem 0;
+    margin: 0.2rem 0;
 }
 
 .title-emph::before {
