--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ body {
   word-break: keep-all;
   word-wrap: break-word;
   font-family: "kakao5", sans-serif;
+  font-size: 16px;
   font-stretch: ultra-condensed;
 }
 
@@ -94,7 +95,6 @@ br {
   height: 72px;
   justify-content: center;
   align-items: center;
-  font-size: 16px;
   letter-spacing: -1px;
 }
 
@@ -179,7 +179,7 @@ a.gnb-menu-item {
   vertical-align: middle;
 }
 
-/* 위에 뉴스 */
+/* 상단 뉴스 */
 
 .card-news-top {
   display: flex;
@@ -188,7 +188,6 @@ a.gnb-menu-item {
 
 .card-wrap {
   width: 50%;
-  height: auto;
   padding: 0 18px;
 }
 
@@ -317,13 +316,12 @@ a.gnb-menu-item {
 }
 
 .card-svg {
-  stroke: #bbb;
-  stroke-width: 1.5px;
   fill: #bbb;
 }
 
-.card-grid {
+.card-grid-top {
   display: grid;
+  height: 876px;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: repeat(4, 1fr);
   grid-gap: 36px;
@@ -392,7 +390,7 @@ a.gnb-menu-item {
   height: 15px;
 }
 
-/* 기술과 사람 */
+/* 카카오문화 */
 
 .culture-section {
   margin: 36px 18px;
@@ -440,21 +438,101 @@ a.culture-link {
   margin: 50px auto 0;
 }
 
+/* 하단 뉴스 */
+
+.card-news-bottom {
+  display: flex;
+}
+
+.reverse {
+  order: 1;
+}
+
+.card-grid-bottom {
+  display: grid;
+  height: 1104px;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: repeat(5, 1fr);
+  grid-gap: 36px;
+}
+
+.card-message {
+  display: inline-block;
+  position: relative;
+  padding: 8px 20px 8px 25px;
+  margin-top: 13px;
+  border-radius: 15px;
+  background-color: #fee102;
+  font-family: 'kakao4', sans-serif;
+  line-height: 26px;
+}
+
+.card-message::before {
+  content: '';
+  position: absolute;
+  width: 18px;
+  height: 18px;
+  top: 0;
+  left: -5px;
+  background: url('../images/cate_yellow.svg') no-repeat;
+}
+
+.cs-list {
+  display: flex;
+  margin: 12px -24px 0;
+  justify-content: center;
+  text-align: center;
+}
+
+.cs-link {
+  height: 42px;
+  margin: 0 4px;
+  padding: 0 20px;
+  border-radius: 15px;
+  background-color: #f4f4f4;
+  font-family: 'kakao2', sans-serif;
+  line-height: 42px;
+  color: #666;
+}
+
+
+
+
 /* media query */
 @media (min-width: 1440px) {
-  .long-card1 {
+  .grid-span1 {
     grid-column: 1 / 2;
     grid-row: 1 / 3;
   }
   
-  .long-card2 {
+  .grid-span2 {
     grid-column: 2 / 3;
     grid-row: 2 / 4;
   }
   
-  .long-card3 {
+  .grid-span3 {
     grid-column: 1 / 2;
     grid-row: 3 / 5;
+  }
+
+  .grid-span4 {
+    grid-column: 2 / 3;
+    grid-row: 1 / 3;
+  }
+
+  .grid-span5 {
+    grid-column: 1 / 2;
+    grid-row: 2 / 4;
+  }
+
+  .grid-span6 {
+    grid-column: 2 / 3;
+    grid-row: 3 / 5;
+  }
+
+  .grid-span7 {
+    grid-column: 1 / 2;
+    grid-row: 4 / 6;
   }
 }
 
@@ -468,9 +546,21 @@ a.culture-link {
     width: 982px;
   }
 
-  .card-grid {
+  .card-grid-top {
     grid-template-columns: 1fr;
-    grid-template-rows: repeat(16, 1fr);
+    grid-template-rows: repeat(8, 1fr);
+  }
+
+  .grid-span1 {
+    grid-row: 1 / 3;
+  }
+  
+  .grid-span2 {
+    grid-row: 4 / 6;
+  }
+  
+  .grid-span3 {
+    grid-row: 6 / 8;
   }
 }
 
